--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,22 @@
     <string name="dashboard">Dashboard</string>
     <string name="inventory">Inventory</string>
     <string name="shopping_cart_viewer">Shopping Cart Viewer</string>
+    <string name="total_revenue">Total Revenue</string>
+    <string name="seller_summary">Seller Summary</string>
+    <string name="total_shipping_cost">Total Shipping Cost</string>
+    <string name="total_profit">Total Profit</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="name">Name</string>
+    <string name="cost">Cost</string>
+    <string name="description">Description</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
 </resources>
