--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,19 @@
     <string name="description">Description</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
+    <string name="pin">PIN</string>
+    <string name="expiration_mm_yy">Expiration MM/YY</string>
+    <string name="card_number">Card Number</string>
+    <string name="zip">ZIP</string>
+    <string name="address">Address</string>
+    <string name="city">City</string>
+    <string name="region">Region</string>
+    <string name="country">Country</string>
+    <string name="to_checkout">To Checkout</string>
+    <string name="checkout">Checkout</string>
+    <string name="existing_card">Existing Card</string>
+    <string name="string_existing_card" />
+    <string name="button">Button</string>
+    <string name="add_card">Add Card</string>
+    <string name="add_shipping_details">Add Shipping Details</string>
 </resources>
