--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,14 @@
     <string name="button">Button</string>
     <string name="add_card">Add Card</string>
     <string name="add_shipping_details">Add Shipping Details</string>
+    <string name="proceed">proceed</string>
+    <string name="back">back</string>
+    <string name="confirm_order">Confirm Order</string>
+    <string name="total_cost">Total Cost</string>
+    <string name="cancel_order">Cancel Order</string>
+    <string name="confirm_order">Confirm Order</string>
+    <string name="buyer_name">Buyer Name</string>
+    <string name="product_name">Product Name</string>
+    <string name="product_cost">Product Cost</string>
+    <string name="view">view</string>
 </resources>
